--- a/apps/ios/ru.lproj/Localizable.strings
+++ b/apps/ios/ru.lproj/Localizable.strings
@@ -164,7 +164,7 @@
 "%d file(s) were not downloaded." = "%d файлов не было загружено.";
 
 /* time interval */
-"%d hours" = "%d час.";
+"%d hours" = "%d ч.";
 
 /* alert title */
 "%d messages not forwarded" = "%d сообщений не переслано";
@@ -729,7 +729,7 @@ swipe action */
 "attempts" = "попытки";
 
 /* No comment provided by engineer. */
-"Audio & video calls" = "Аудио- и видеозвонки";
+"Audio & video calls" = "Аудио и видеозвонки";
 
 /* No comment provided by engineer. */
 "Audio and video calls" = "Аудио и видео звонки";
@@ -1733,7 +1733,8 @@ swipe action */
 /* No comment provided by engineer. */
 "Delete message?" = "Удалить сообщение?";
 
-/* alert button */
+/* alert action
+alert button */
 "Delete messages" = "Удалить сообщения";
 
 /* No comment provided by engineer. */
@@ -2237,6 +2238,9 @@ chat item action */
 
 /* alert message */
 "Error connecting to forwarding server %@. Please try later." = "Ошибка подключения к пересылающему серверу %@. Попробуйте позже.";
+
+/* subscription status explanation */
+"Error connecting to the server used to receive messages from this connection: %@" = "Ошибка подключения к серверу, используемому для получения сообщений от этого соединения: %@";
 
 /* No comment provided by engineer. */
 "Error creating address" = "Ошибка при создании адреса";
@@ -3305,10 +3309,10 @@ snd error text */
 /* No comment provided by engineer. */
 "Member role will be changed to \"%@\". The member will receive a new invitation." = "Роль члена будет изменена на \"%@\". Будет отправлено новое приглашение.";
 
-/* No comment provided by engineer. */
+/* alert message */
 "Member will be removed from chat - this cannot be undone!" = "Член будет удален из разговора - это действие нельзя отменить!";
 
-/* No comment provided by engineer. */
+/* alert message */
 "Member will be removed from group - this cannot be undone!" = "Член группы будет удален - это действие нельзя отменить!";
 
 /* alert message */
@@ -3709,6 +3713,9 @@ snd error text */
 
 /* servers error */
 "No servers to send files." = "Нет серверов для отправки файлов.";
+
+/* No comment provided by engineer. */
+"no subscription" = "нет подписки";
 
 /* copied message info in history */
 "no text" = "нет текста";
@@ -4374,7 +4381,7 @@ swipe action */
 /* No comment provided by engineer. */
 "Relay server protects your IP address, but it can observe the duration of the call." = "Relay сервер защищает Ваш IP адрес, но может отслеживать продолжительность звонка.";
 
-/* No comment provided by engineer. */
+/* alert action */
 "Remove" = "Удалить";
 
 /* No comment provided by engineer. */
@@ -4389,7 +4396,7 @@ swipe action */
 /* No comment provided by engineer. */
 "Remove member" = "Удалить члена группы";
 
-/* No comment provided by engineer. */
+/* alert title */
 "Remove member?" = "Удалить члена группы?";
 
 /* No comment provided by engineer. */
@@ -5545,7 +5552,7 @@ report reason */
 "To reveal your hidden profile, enter a full password into a search field in **Your chat profiles** page." = "Чтобы показать Ваш скрытый профиль, введите его пароль в поле поиска на странице **Ваши профили чата**.";
 
 /* No comment provided by engineer. */
-"To send" = "Для оправки";
+"To send" = "Для отправки";
 
 /* alert message */
 "To send commands you must be connected." = "Вы должны быть соединены, чтобы отправлять команды.";
@@ -5582,6 +5589,9 @@ report reason */
 
 /* No comment provided by engineer. */
 "Transport sessions" = "Транспортные сессии";
+
+/* subscription status explanation */
+"Trying to connect to the server used to receive messages from this connection." = "Попытка подключиться к серверу, используемому для получения сообщений от этого соединения.";
 
 /* No comment provided by engineer. */
 "Turkish interface" = "Турецкий интерфейс";
@@ -6075,8 +6085,14 @@ report reason */
 /* new chat sheet title */
 "You are already joining the group!\nRepeat join request?" = "Вы уже вступаете в группу!\nПовторить запрос на вступление?";
 
+/* subscription status explanation */
+"You are connected to the server used to receive messages from this connection." = "Вы подключены к серверу, используемому для приема сообщений от этого соединения.";
+
 /* No comment provided by engineer. */
 "You are invited to group" = "Вы приглашены в группу";
+
+/* subscription status explanation */
+"You are not connected to the server used to receive messages from this connection (no subscription)." = "Вы не подключены к серверу, используемому для получения сообщений по этому соединению (нет подписки).";
 
 /* No comment provided by engineer. */
 "You are not connected to these servers. Private routing is used to deliver messages to them." = "Вы не подключены к этим серверам. Для доставки сообщений на них используется конфиденциальная доставка.";
