--- a/apps/ios/SimpleX NSE/cs.lproj/Localizable.strings
+++ b/apps/ios/SimpleX NSE/cs.lproj/Localizable.strings
@@ -1,7 +1,15 @@
-/* 
-  Localizable.strings
-  SimpleX
+/* notification body */
+"%d new events" = "Hlasové zprávy";
 
-  Created by EP on 30/07/2024.
-  Copyright © 2024 SimpleX Chat. All rights reserved.
-*/
+/* notification body */
+"From %d chat(s)" = "Z %d chatu(ů)";
+
+/* notification body */
+"From: %@" = "Od: %@";
+
+/* notification */
+"New events" = "Nové události";
+
+/* notification */
+"New messages" = "Nové zprávy";
+
